--- a/sendai-subway-api.cabal
+++ b/sendai-subway-api.cabal
@@ -17,11 +17,25 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
                      , Subway
+                     , ManipulateDB.Core
+                     , ManipulateDB.Query
+                     , ManipulateDB.Line
+                     , ManipulateDB.Station
+                     , ManipulateDB.Destination
+                     , ManipulateDB.LineStation
+                     , ManipulateDB.StationDestination
   build-depends:       base >= 4.7 && < 5
                      , text
                      , time
                      , scalpel
                      , MissingH
+                     , HDBC
+                     , HDBC-postgresql
+                     , HDBC-session
+                     , relational-record
+                     , relational-query
+                     , relational-query-HDBC
+                     , persistable-record
   default-language:    Haskell2010
 
 executable sendai-subway-api
