--- a/stack.yaml
+++ b/stack.yaml
@@ -44,6 +44,7 @@ packages:
     - Spock
     - Spock-core
     - reroute
+  extra-dep: true
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps: []
